# ivrit2handbot

./: .replit  pyproject.toml  requirements.txt
ivrit2handbot/: hebrew_to_image.py  keep_alive.py  main.py  test_image.py  text_to_image.py
