[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper==3.0.0",
    "openai==1.57.0",
    "pillow==11.0.0",
    "python-bidi==0.6.3",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.2",
]
